--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
     <title>BMI Calculator</title>
 </head>
 <body>
-    
+    <main>
+        <form class="p-3">
+            <label for="#height">Enter your height in metres</label>
+            <input type="text" id="height" placeholder="Height (m)" class="form-control" required>
+            <br><br>
+            <label for="#weight">Enter your weight in kilograms</label>
+            <input type="text" id="weight" placeholder="Weight(kg)" class="form-control" required>
+            <br><br>
+            <button id="btnCalc" type="button" class="btn btn-danger mb-3">Calculate</button>
+            <br><br>
+            <label for="" id="output" class="fw-bold"></label>
+            <br><br>
+        </form>
+    </main>
+
+    <script src="./script/code.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> 
 </body>
 </html>
